--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -1,10 +1,4 @@
 
-header_jspf.anchor.all_orders = All orders
-header_jspf.anchor.login      = Login
-header_jspf.anchor.logout     = Logout
-header_jspf.anchor.menu       = Menu
-header_jspf.anchor.settings   = Settings
-
 res.BookCatalog = Book catalog
 res.Name = Name
 res.Year = Year
@@ -20,7 +14,7 @@ res.FindBy= Find by:
 res.ShowAll = Show all
 res.Orders = Orders
 res.CancelOrder = Cancel Order
-res.Cancel = Cancel
+res.Cancel = Delete
 res.State = State
 res.Processing = Processing
 res.Registration = Registration
@@ -33,21 +27,56 @@ res.InvNumber = Inv. number
 res.Admin = admin
 res.Librarian = librarian
 res.Reader = reader
+res.Back = Back
+res.SignIn = Sign in
+res.RegistrationUser = Registration
 
-list_cards_jsp.button.make_an_order = Make an order
-list_cards_jsp.table.header.name    = Name
-list_cards_jsp.table.header.order   = Order
-list_cards_jsp.table.header.price   = Price
+res.ListReaders = List readers
+res.CardOrder = Cards/Orders
+res.Active = Active
+res.Blocked = Blocked
 
-list_orders_jsp.table.header.bill = Bill
-list_orders_jsp.table.header.client = Client
-list_orders_jsp.table.header.status = Status
+res.ListOrders = Orders of the reader
+res.Give = Give
+res.Quantity = In stock
 
-login_jsp.button.login = Login
-login_jsp.label.login  = Login
-login_jsp.label.password = Password
+res.ListCards = Cards of the reader
+res.Delete = Write off
+res.MakeCard = Make a card to the reader
+res.SelectCopyBook = Select a copy of the book
+res.Make = Make
+res.ReturnDate = Return date:
 
-settings_jsp.button.update = Update
-settings_jsp.label.first_name = First name
-settings_jsp.label.last_name = Last name
-settings_jsp.label.localization = Localization
+res.MakeBook = Add Book
+res.MakeBook2 = Make book
+res.Edit = Edit
+res.Edit2 = Edit
+res.Cancel2 = Del
+res.ListUsers = List users
+res.Librarian2 = Librarian
+res.State2 = Active/Blocked
+res.ListAuthors = List authors
+res.ListPublishing = List publishing
+res.EditBook = Edit book
+res.ListCopyBook = List of copies of the book
+res.MakeCopy = Make copy
+res.Save = Save
+res.SettingsBook = Settings book
+res.SetInvNumber = Set Inv. number
+
+res.loginIn = Login
+res.login  = Login
+res.password = Password
+
+res.ErrorOrderExist = Perhaps such an order already exists
+res.ErrorOccurred = The following error occurred
+res.Error = Error
+res.ErrorLoginPassEmpty = Login/password cannot be empty, but no more than 45 characters
+res.ErrorNotFindUser = Cannot find user with such login/password
+res.ErrorUserExists = Such user already exists
+res.ErrorUserBlocked = The user is blocked. Please contact your administrator
+res.ErrorWrongData = Enter the correct date (not earlier than tomorrow)
+res.ErrorMoreThan45ch = The input field must not be empty, but no more than 45 characters
+res.ErrorYearAndFine = The year and fine field can only be digital (max 4 digits)
+res.ErrorInvNumber = Inv. number must be unique
+res.ErrorSetAll = Set all fields
