--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -68,31 +68,33 @@
         <filter-name>CommandAccessFilter</filter-name>
         <filter-class>app.ui.filter.CommandAccessFilter</filter-class>
 
-<!--        admin commands -->
+        <!--        admin commands -->
         <init-param>
             <param-name>admin</param-name>
-            <param-value>listAdminCatalog listAdminUsers listAdminAuthors editAdminBook settingsAdminBook makeAdminBook listAdminPublishings</param-value>
+            <param-value>listAdminCatalog listAdminUsers listAdminAuthors editAdminBook settingsAdminBook makeAdminBook
+                listAdminPublishings
+            </param-value>
         </init-param>
 
-<!--        librarian commands -->
+        <!--        librarian commands -->
         <init-param>
             <param-name>librarian</param-name>
             <param-value>listLibReaders listLibOrders listLibCards makeLibCard listLibCatalog</param-value>
         </init-param>
 
-<!--        reader commands -->
+        <!--        reader commands -->
         <init-param>
             <param-name>reader</param-name>
             <param-value>listCards listCatalog listOrders</param-value>
         </init-param>
 
-<!--        commands for all roles -->
+        <!--        commands for all roles -->
         <init-param>
             <param-name>common</param-name>
             <param-value>logout</param-value>
         </init-param>
 
-<!--        commands without access control -->
+        <!--        commands without access control -->
         <init-param>
             <param-name>out-of-control</param-name>
             <param-value>login registration error</param-value>
