--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -60,6 +60,7 @@ res.MakeCopy = Make copy
 res.Save = Save
 res.SettingsBook = Settings book
 res.SetInvNumber = Set Inv. number
+res.UserSettings = User settings
 
 res.loginIn = Login
 res.login  = Login
@@ -72,7 +73,7 @@ res.ErrorNotFindUser = Cannot find user with such login/password
 res.ErrorUserExists = Such user already exists
 res.ErrorUserBlocked = The user is blocked. Please contact your administrator
 res.ErrorWrongData = Enter the correct date (not earlier than tomorrow)
-res.ErrorMoreThan45ch = The input field must not be empty, but no more than 45 characters
+res.ErrorMoreThan45ch = The input field must not be empty, and has a limitation
 res.ErrorYearAndFine = The year and fine field can only be digital (max 4 digits)
 res.ErrorInvNumber = Inv. number must be unique
 res.ErrorSetAll = Set all fields
