--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -48,8 +48,6 @@ res.ReturnDate = Return date:
 res.MakeBook = Add Book
 res.MakeBook2 = Make book
 res.Edit = Edit
-res.Edit2 = Edit
-res.Cancel2 = Del
 res.ListUsers = List users
 res.Librarian2 = Librarian
 res.State2 = Active/Blocked
@@ -65,6 +63,7 @@ res.UserSettings = User settings
 res.loginIn = Login
 res.login  = Login
 res.password = Password
+res.newPassword = New password
 
 res.ErrorOrderExist = Perhaps such an order already exists
 res.ErrorOccurred = The following error occurred
