--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -59,6 +59,7 @@ res.Save = Save
 res.SettingsBook = Settings book
 res.SetInvNumber = Set Inv. number
 res.UserSettings = User settings
+res.Error = Error
 
 res.loginIn = Login
 res.login  = Login
@@ -76,3 +77,4 @@ res.ErrorMoreThan45ch = The input field must not be empty, and has a limitation
 res.ErrorYearAndFine = The year and fine field can only be digital (max 4 digits)
 res.ErrorInvNumber = Inv. number must be unique
 res.ErrorSetAll = Set all fields
+res.ErrorWrongPassword = Wrong password
