--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -60,6 +60,7 @@ res.SettingsBook = Settings book
 res.SetInvNumber = Set Inv. number
 res.UserSettings = User settings
 res.Error = Error
+res.ListEmpty = The list is empty
 
 res.loginIn = Login
 res.login  = Login
@@ -78,3 +79,4 @@ res.ErrorYearAndFine = The year and fine field can only be digital (max 4 digits
 res.ErrorInvNumber = Inv. number must be unique
 res.ErrorSetAll = Set all fields
 res.ErrorWrongPassword = Wrong password
+res.ErrorCantDelUserHasCard = Can't delete a user with a valid card
