--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -80,3 +80,4 @@ res.ErrorInvNumber = Inv. number must be unique
 res.ErrorSetAll = Set all fields
 res.ErrorWrongPassword = Wrong password
 res.ErrorCantDelUserHasCard = Can't delete a user with a valid card
+res.ErrorUserAlreadyLogged = The user is already signed in from another device
