--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -115,6 +115,20 @@
     </listener>
 
     <!--============================================================
+        Session Listener
+    =============================================================-->
+    <listener>
+        <listener-class>app.ui.listener.SessionListener</listener-class>
+    </listener>
+
+    <!--============================================================
+     Session timeout, min
+    =============================================================-->
+    <session-config>
+        <session-timeout>5</session-timeout>
+    </session-config>
+
+    <!--============================================================
         Error page
     =============================================================-->
     <error-page>
