--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -81,3 +81,4 @@ res.ErrorSetAll = Set all fields
 res.ErrorWrongPassword = Wrong password
 res.ErrorCantDelUserHasCard = Can't delete a user with a valid card
 res.ErrorUserAlreadyLogged = The user is already signed in from another device
+res.ErrorDontHavePermission = You do not have permission to access the requested resource. The session may have run out. Please login again.
